# sourcebound

./: .clean-docs-residue.yml  .clean-docs-trust.json  .clean-docs.yml  .gitattributes  .gitignore  .pre-commit-hooks.yaml  .sourcebound-residue.yml  .sourcebound-trust.json  .sourcebound.yml  CLEAN_DOCS_SPEC.md  CONTRIBUTING.md  DECISION_LOG.md  LICENSE  NOTES.md  README.md  REPORT.md  SECURITY.md  SOURCEBOUND_SPEC.md  STANDARD.md  STANDARD.md.orig  WORKORDER.md  doc-hygiene.py  llms.txt  pyproject.toml  quality-gate.py  quality-gate.py.orig  ultra-csm-before-after.md
.clean-docs/: audit-baseline.json  eval.yml  evaluation-history.json  improvement-candidates.json  improvement-lifecycle.json  reader-trial-rubric-v1.1.yml  reader-trial-rubric.yml  reader-trial.json
.github/: pull_request_template.md
.sourcebound/: audit-baseline.json  eval.yml  evaluation-history.json  improvement-candidates.json  improvement-lifecycle.json  reader-trial-rubric-v1.1.yml  reader-trial-rubric.yml  reader-trial.json
docs/: ARCHITECTURE.md  BEHAVIOR_SIGNALS.md  CLI.md  CONTEXT_COMPILATION.md  EVALUATION.md  EXPERIMENTAL.md  EXTENSIONS.md  FEEDBACK.md  IMPROVEMENTS.md  INIT_PROPOSER.md  INSTALL.md  LIFECYCLE_EVIDENCE.md  REFERENCE.md  RELEASES.md  REVIEW_LEDGER.md  SECURITY_MODEL.md  SUPPORT.md  SURFACE.md
scripts/: benchmark_fixtures.py  build_learning_evidence.py  build_mdx_adapter.py  build_release.py  build_sbom.py  dogfood_bootstrap_repos.py  dogfood_public_repos.py  publish_release.py  record_demo.py  record_learning_tutorial.py  render_social_preview.py  run_acceptance.py  (+4 more)
(+306 files in other folders)
