[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-docs"
version = "0.1.0a1"
description = "Keep repository documentation bound to its sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["mypy>=1.10", "pytest>=8.0", "ruff>=0.6", "types-PyYAML>=6.0"]

[project.scripts]
clean-docs = "clean_docs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
