[build-system]
requires = ["setuptools==75.8.0", "wheel==0.45.1"]
build-backend = "setuptools.build_meta"

[project]
name = "clean-docs"
version = "1.2.0rc2"
description = "Keep repository documentation bound to its sources."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
dependencies = ["PyYAML>=6.0", "tomli>=2.0; python_version < '3.11'"]

[project.optional-dependencies]
dev = [
  "build==1.2.2.post1",
  "mypy>=1.10",
  "pytest>=8.0",
  "ruff>=0.6",
  "setuptools==75.8.0",
  "types-PyYAML>=6.0",
  "wheel==0.45.1",
]

[project.scripts]
clean-docs = "clean_docs.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
clean_docs = ["standards/*.json", "standards/*.md"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src", "."]
